tests/files/type_checker_tests/should_fail/183.cmdr
//Should fail calling builtin with incorrect parameters
sin("hi");
